--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.2",
+    "firebase": "^9.19.1",
+    "firebase-tools": "^11.27.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
